--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "dsa"
+name = "text_clust"
 version = "0.1.0"
 description = ""
 authors = ["godwin amegah <winneramegah492@gmail.com>"]
@@ -10,7 +10,7 @@ packages = []
 python = ">=3.10,<3.12"
 ffmpeg = "^1.4"
 graphviz = "^0.20.1"
-ipython = "^8.13.1"
+ipython = "^8.13.2"
 ipywidgets = "^8.0.6"
 joblib = "^1.2.0"
 jupyterlab = "^3.6.3"
@@ -23,16 +23,16 @@ pandas = "^2.0.1"
 pillow = "^9.5.0"
 xgboost = "^1.7.5"
 pydot = "^1.4.2"
-requests = "^2.29.0"
+requests = "^2.30.0"
 scikit-learn = "^1.2.2"
-statsmodels = "^0.13.5"
+statsmodels = "^0.14.0"
 tqdm = "^4.65.0"
 umap-learn = "^0.5.3"
 wheel = "^0.40.0"
 widgetsnbextension = "^4.0.7"
 keras-tuner = "^1.3.5"
 tensorboard-plugin-profile = "^2.11.2"
-tensorboard = "^2.12.3"
+tensorboard = "^2.13.0"
 tensorflow-addons = "^0.20.0"
 tensorflow-datasets = "^4.9.2"
 tensorflow-hub = "^0.13.0"
