sphérical k-means - implement i sequentialy caused by non-optimzed backend

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ pillow = "^9.5.0"
 xgboost = "^1.7.5"
 pydot = "^1.4.2"
 requests = "^2.30.0"
-scikit-learn = "^1.2.2"
+scikit-learn = ">=0.23.0"
 statsmodels = "^0.14.0"
 tqdm = "^4.65.0"
 umap-learn = "^0.5.3"
@@ -51,9 +51,10 @@ scipy = "^1.10.1"
 six = "^1.16.0"
 hdbscan = "^0.8.29"
 seaborn = "^0.12.2"
-scikit-learn-extra = "^0.3.0"
 coclust = "^0.2.1"
 spherecluster = "^0.1.7"
+soyclustering = "^0.2.0"
+scikit-learn-extra = "^0.3.0"
 
 
 [build-system]
