--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ matplotlib = "^3.7.1"
 nbdime = "^3.2.1"
 nltk = "^3.8.1"
 numexpr = "^2.8.4"
-numpy = "^1.24.3"
+numpy = ">=1.22,<1.24"
 pandas = "^2.0.1"
 pillow = "^9.5.0"
 xgboost = "^1.7.5"
@@ -32,7 +32,7 @@ wheel = "^0.40.0"
 widgetsnbextension = "^4.0.7"
 keras-tuner = "^1.3.5"
 tensorboard-plugin-profile = "^2.11.2"
-tensorboard = "^2.13.0"
+tensorboard = ">=2.12,<2.13"
 tensorflow-addons = "^0.20.0"
 tensorflow-datasets = "^4.9.2"
 tensorflow-hub = "^0.13.0"
@@ -55,6 +55,8 @@ coclust = "^0.2.1"
 spherecluster = "^0.1.7"
 soyclustering = "^0.2.0"
 scikit-learn-extra = "^0.3.0"
+np = "^1.0.2"
+tensorflow = "^2.12.0"
 
 
 [build-system]
